--- a/07_07_25.md
+++ b/07_07_25.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: 07/07/25
 ---
 
 This week I started my project of 3D printing the planet under the supervision of Dr Michael Winston Dales. My aim for this week was to get a prototype up and running which took terrain data in the form of GeoTIFF, and outputs a 3D printable file. I started off slowly getting to grips with the various data sets and the basics of 3D printing (having never actually 3D printed something before). My first step to understanding what was actually going on with the data was to generate some simple 2D images, where the colour of each pixel corresponded to its height.
