--- a/14_07_25.md
+++ b/14_07_25.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: 14/07/25
 ---
 
 Second week into my project and I think that things are coming along nicely. I started off the week by taking a trip with Michael to the Cambridge Makespace where he showed me around the various pieces of equipment and explained some useful bits of information on 3D printing. He also helped me do my first 3D print of a model I had made in the week prior. It was a little rough around the edges but it was a good start and it was nice to having something I could physically hold and interact with.
